Added: real data for categories and page list

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -1,54 +1,165 @@
 {
-  "app": "تطبيق",
-  "job": "وظيفة",
+  "dashboard": "لوحة القيادة",
   "user": "مستخدم",
-  "list": "قائمة",
-  "edit": "تعديل",
-  "shop": "متجر",
-  "blog": "مدونة",
-  "post": "مقالة",
-  "mail": "بريد",
-  "chat": "دردشة",
-  "file": "ملف",
-  "tour": "جولة",
-  "cards": "بطاقات",
-  "blank": "فارغ",
-  "order": "طلب",
-  "lists": "قوائم",
-  "create": "إنشاء",
-  "kanban": "كانبان",
-  "general": "عام",
-  "banking": "مصرفية",
-  "booking": "حجز",
-  "profile": "ملف تعريف",
-  "account": "حساب",
   "product": "منتج",
-  "invoice": "فاتورة",
+  "order": "طلب",
+  "review": "المراجعات",
+  "list": "قائمة",
+  "products": "منتجات",
+  "create": "جديد",
+  "newUser": "مستخدم جديد",
+  "name": "اسم",
+  "username": "اسم المستخدم",
+  "registerType": "نوع التسجيل",
+  "role": "دور",
+  "orders": "طلبات",
+  "cart": "عربة التسوق",
+  "status": "حالة",
+  "searchUser": "بحث عن مستخدم...",
+  "createAt": "أنشئت في",
+  "stock": "مخزون",
+  "discount": "تخفيض",
+  "price": "سعر",
+  "discountedPrice": "سعر مخفض",
+  "rate": "معدل",
+  "newProduct": "منتج جديد",
+  "delete": "يمسح",
+  "deleteProduct": "هل أنت متأكد أنك تريد الحذف",
+  "items": "أغراض",
+  "clear": "واضح",
+  "selected": "المحدد",
+  "view": "شاهد",
+  "edit": "يحرر",
+  "deletePrompt": "هل أنت متأكد أنك تريد حذف",
+  "search": "يبحث...",
+  "export": "يصدّر",
+  "import": "يستورد",
+  "print": "مطبعة",
+  "priceSale": "سعر البيع",
+  "found": "معثور عليه",
   "details": "تفاصيل",
-  "checkout": "الدفع",
-  "calendar": "تقويم",
-  "overview": "نظرة عامة",
-  "analytics": "تحليلات",
-  "ecommerce": "التجارة الإلكترونية",
-  "management": "إدارة",
-  "menu_level": "مستوى القائمة",
-  "item_label": "تسمية العنصر",
-  "description": "الوصف",
-  "other_cases": "حالات أخرى",
-  "item_caption": "عنوان العنصر",
-  "file_manager": "مدير الملفات",
-  "menu_level_1a": "مستوى القائمة 1a",
-  "menu_level_1b": "مستوى القائمة 1b",
-  "menu_level_2a": "مستوى القائمة 2a",
-  "menu_level_2b": "مستوى القائمة 2b",
-  "menu_level_3a": "مستوى القائمة 3a",
-  "menu_level_3b": "مستوى القائمة 4b",
-  "item_disabled": "العنصر معطل",
-  "item_by_roles": "العنصر حسب الأدوار",
-  "item_external_link": "رابط خارجي للعنصر",
-  "only_admin_can_see_this_item": "يمكن للمسؤول فقط رؤية هذا العنصر",
-  "upgrade_to_pro": "الترقية إلى Pro",
-  "demo": {
-    "title": "Arabic"
-  }
+  "subDetails": "العنوان، الوصف المختصر، الصورة...",
+  "productName": "اسم المنتج",
+  "subDescription": "الوصف الفرعي",
+  "description": "وصف",
+  "content": "محتوى",
+  "images": "الصور",
+  "properties": "ملكيات",
+  "formPrperties": "وظائف وسمات إضافية...",
+  "productCode": "كود المنتج",
+  "productSKU": "رمز المنتج",
+  "quantity": "مخزون",
+  "category": "فئة",
+  "colors": "الألوان",
+  "tags": "العلامات",
+  "saleLabel": "تسمية البيع",
+  "newLabel": "تسمية جديدة",
+  "pricing": "التسعير",
+  "priceInputs": "المدخلات المتعلقة بالسعر",
+  "regularPrice": "سعر عادي",
+  "salePrice": "سعر البيع",
+  "includeDiscount": "تضمين الخصم",
+  "createProduct": "إنشاء المنتج",
+  "saveChanges": "حفظ التغييرات",
+  "createNewNroduct": "إنشاء منتج جديد",
+  "writeSomething": "أكتب شيئا رائعا...",
+  "dropOrClick": "قم بإسقاط الملفات هنا أو انقر فوق",
+  "dropOrSelect": "قم بإسقاط أو تحديد الملف",
+  "browse": "تصفح",
+  "throughMachine": "شامل جهازك",
+  "removeAll": "حذف الكل",
+  "upload": "رفع",
+  "updateSuccess": "تحديث النجاحات",
+  "createsuccess": "تحقيق النجاح",
+  "invalidInput": "أنواع الإدخال غير صالحة",
+  "somethingWentWrong": "هناك خطأ ما",
+  "deleteSuccess": "تم الحذف بنجاح!",
+  "usernameOrEmailExists": "اسم المستخدم أو البريد الإلكتروني موجود",
+  "invalidEmail": "يجب أن يكون البريد الإلكتروني عنوان بريد إلكتروني صالحًا",
+  "emailRequired": "البريد الالكتروني مطلوب",
+  "usernameRequired": "اسم المستخدم مطلوب",
+  "roleRequired": "الدور مطلوب",
+  "statusRequired": "الحالة مطلوبة",
+  "addressRequired": "العنوان مطلوب",
+  "countryRequired": "الدولة مطلوبة",
+  "fullNameRequired": "الإسم الكامل ضروري",
+  "phoneNumberRequired": "رقم الهاتف مطلوب",
+  "passwordRequired": "كلمة المرور مطلوبة",
+  "passwordMismatch": "كلمة المرور غير متطابقة",
+  "confirmPasswordRequired": "تأكيد كلمة المرور مطلوب",
+  "passwordMinLength": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
+  "allowedFileTypes": "مسموح به *.jpeg، *.jpg، *.png، *.gif",
+  "maxSize": "الحد الأقصى لحجم ${size}",
+  "banned": "محظور",
+  "applyDisableAccount": "تطبيق تعطيل الحساب",
+  "emailVerified": "تم التحقق من البريد الإلكتروني",
+  "disableVerificationEmail": "سيؤدي تعطيل هذا إلى إرسال رسالة تحقق للمستخدم تلقائيًا",
+  "deleteUser": "مسح المستخدم",
+  "emailAddress": "عنوان البريد الإلكتروني",
+  "fullName": "الاسم الكامل",
+  "phoneNumber": "رقم التليفون",
+  "country": "دولة",
+  "address": "عنوان",
+  "password": "كلمة المرور",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "createUser": "إنشاء مستخدم",
+  "createNewUser": "إنشاء مستخدم جديد",
+  "original100Percent": "أصلي 100%",
+  "original100PercentDescription": "انغمس في المذاق الرائع لألواح الشوكولاتة، وقصب الحلوى، والآيس كريم، والحلوى، والكعك اللذيذ - تنتظرك سيمفونية حلوة من النكهات.",
+  "replacement10DaysDescription": "استمتع بتجربة تسوق خالية من القلق مع سياسة الاستبدال لمدة 10 أيام. \nإذا لم تكن عملية الشراء الخاصة بك مثالية، فسنستبدلها بكل سرور بابتسامة. \nاستمتع بأفضل الحلويات دون قلق!",
+  "replacement10Days": "استبدال لمدة 10 أيام",
+  "warrantyYear": "1 سنة الضمان",
+  "warrantyYearDescription": "استمتع براحة البال مع ضماننا لمدة عام واحد. \nيضمن التزامنا بالجودة أن تظل عملية الشراء الخاصة بك، مثل كعكة الزنجبيل المصنوعة من حلوى القطن، حلوة ومبهجة طوال العام.",
+  "backToList": "الرجوع للقائمة",
+  "descriptionTabLabel": "وصف",
+  "reviewsTabLabel": "التعليقات",
+  "back": "خلف",
+  "favorite": "مفضل",
+  "share": "يشارك",
+  "color": "لون",
+  "size": "مقاس",
+  "sizeChart": "حجم الرسم البياني",
+  "addToCart": "أضف إلى السلة",
+  "buyNow": "اشتري الآن",
+  "available": "متاح",
+  "action": "فعل",
+  "qty": "الكمية",
+  "searchCart": "البحث (اسم المنتج، SKU، الكمية)",
+  "all": "الجميع",
+  "customer": "عميل",
+  "date": "تاريخ",
+  "totalPrice": "السعر الكلي",
+  "totalDiscountedPrice": "السعر الإجمالي المخفض",
+  "pending": "قيد الانتظار",
+  "completed": "مكتمل",
+  "cancelled": "ألغيت",
+  "refunded": "ردها",
+  "searchCustomer": "البحث عن رقم العميل أو الطلب...",
+  "startDate": "تاريخ البدء",
+  "endDate": "تاريخ الانتهاء",
+  "discountedTotalPrice": "السعر الإجمالي المخفض",
+  "shipping": "شحن",
+  "yourProfit": "الربح الخاص بك",
+  "total": "المجموع",
+  "orderTime": "وقت الطلب",
+  "paymentTime": "وقت الدفع",
+  "deliveryTime": "وقت التسليم للناقل",
+  "completionTime": "وقت الانتهاء",
+  "customerInfo": "معلومات العملاء",
+  "addToBlackList": "أضف إلى القائمة السوداء",
+  "trackNo": "عدد تتبع",
+  "shipBy": "السفينة عن طريق",
+  "speedy": "سريع",
+  "card": "بطاقة",
+  "payment": "قسط",
+  "delivery": "توصيل",
+  "english": "الإنجليزية",
+  "chinese": "الصينية",
+  "arabic": "العربية",
+  "farsi": "فارسی",
+  "home": "بيت",
+  "categories": "فئات",
+  "aboutUs": "معلومات عنا",
+  "contactUs": "اتصل بنا",
+  "faqs": "الأسئلة الشائعة"
 }
