--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -1,54 +1,155 @@
 {
-  "app": "应用",
-  "job": "工作",
+  "dashboard": "仪表板",
   "user": "用户",
-  "list": "列表",
-  "edit": "编辑",
-  "shop": "商店",
-  "blog": "博客",
-  "post": "文章",
-  "mail": "邮件",
-  "chat": "聊天",
-  "file": "文件",
-  "tour": "导览",
-  "cards": "卡片",
-  "blank": "空白",
-  "order": "订单",
-  "lists": "列表",
-  "create": "创建",
-  "kanban": "看板",
-  "general": "常规",
-  "banking": "银行",
-  "booking": "预订",
-  "profile": "个人资料",
-  "account": "账户",
   "product": "产品",
-  "invoice": "发票",
+  "order": "订单",
+  "review": "评价",
+  "list": "列表",
+  "products": "产品",
+  "create": "新建",
+  "newUser": "新用户",
+  "name": "名称",
+  "username": "用户名",
+  "registerType": "注册类型",
+  "role": "角色",
+  "orders": "订单",
+  "cart": "购物车",
+  "status": "状态",
+  "searchUser": "搜索用户...",
+  "createAt": "创建时间",
+  "stock": "库存",
+  "discount": "折扣",
+  "price": "价格",
+  "discountedPrice": "折后价格",
+  "rate": "评分",
+  "newProduct": "新产品",
+  "delete": "删除",
+  "deleteProduct": "您确定要删除吗",
+  "items": "商品",
+  "clear": "清除",
+  "selected": "已选",
+  "view": "查看",
+  "edit": "编辑",
+  "deletePrompt": "您确定要删除吗",
+  "search": "搜索...",
+  "export": "导出",
+  "import": "导入",
+  "print": "打印",
   "details": "详情",
-  "checkout": "结账",
-  "calendar": "日历",
-  "overview": "概览",
-  "analytics": "分析",
-  "ecommerce": "电子商务",
-  "management": "管理",
-  "menu_level": "菜单级别",
-  "item_label": "项目标签",
+  "subDetails": "标题、简短描述、图片...",
+  "productName": "产品名称",
+  "subDescription": "副标题",
   "description": "描述",
-  "other_cases": "其他情况",
-  "item_caption": "项目标题",
-  "file_manager": "文件管理器",
-  "menu_level_1a": "菜单级别 1a",
-  "menu_level_1b": "菜单级别 1b",
-  "menu_level_2a": "菜单级别 2a",
-  "menu_level_2b": "菜单级别 2b",
-  "menu_level_3a": "菜单级别 3a",
-  "menu_level_3b": "菜单级别 4b",
-  "item_disabled": "项目已禁用",
-  "item_by_roles": "按角色显示的项目",
-  "item_external_link": "项目外部链接",
-  "only_admin_can_see_this_item": "只有管理员可以看到此项目",
-  "upgrade_to_pro": "升级到专业版",
-  "demo": {
-    "title": "Chinese"
-  }
+  "content": "内容",
+  "images": "图片",
+  "properties": "属性",
+  "formPrperties": "附加功能和属性...",
+  "productCode": "产品代码",
+  "productSKU": "产品SKU",
+  "quantity": "库存",
+  "category": "类别",
+  "colors": "颜色",
+  "tags": "标签",
+  "saleLabel": "促销标签",
+  "newLabel": "新品标签",
+  "pricing": "定价",
+  "priceInputs": "与价格相关的输入",
+  "regularPrice": "常规价格",
+  "priceSale": "促销价格",
+  "includeDiscount": "包含折扣",
+  "createProduct": "创建产品",
+  "saveChanges": "保存更改",
+  "createNewNroduct": "创建新产品",
+  "writeSomething": "写点什么...",
+  "dropOrClick": "拖拽文件到这里或点击",
+  "dropOrSelect": "拖拽或选择文件",
+  "browse": "浏览",
+  "throughMachine": "通过您的设备",
+  "removeAll": "移除所有",
+  "upload": "上传",
+  "updateSuccess": "更新成功",
+  "createsuccess": "创建成功",
+  "invalidInput": "无效的输入类型",
+  "somethingWentWrong": "出现了问题",
+  "deleteSuccess": "删除成功！",
+  "usernameOrEmailExists": "用户名或电子邮件已存在",
+  "invalidEmail": "电子邮件必须是有效的电子邮件地址",
+  "emailRequired": "电子邮件是必需的",
+  "usernameRequired": "用户名是必需的",
+  "roleRequired": "角色是必需的",
+  "statusRequired": "状态是必需的",
+  "addressRequired": "地址是必需的",
+  "countryRequired": "国家是必需的",
+  "fullNameRequired": "全名是必需的",
+  "phoneNumberRequired": "电话号码是必需的",
+  "passwordRequired": "密码是必需的",
+  "passwordMismatch": "密码不匹配",
+  "confirmPasswordRequired": "确认密码是必需的",
+  "passwordMinLength": "密码长度至少为6个字符",
+  "allowedFileTypes": "允许的文件类型 *.jpeg, *.jpg, *.png, *.gif",
+  "maxSize": "最大尺寸",
+  "banned": "已封禁",
+  "applyDisableAccount": "申请禁用账户",
+  "emailVerified": "电子邮件已验证",
+  "disableVerificationEmail": "禁用此选项将自动发送验证电子邮件给用户",
+  "deleteUser": "删除用户",
+  "emailAddress": "电子邮件地址",
+  "fullName": "全名",
+  "phoneNumber": "电话号码",
+  "country": "国家",
+  "address": "地址",
+  "password": "密码",
+  "confirmPassword": "确认密码",
+  "createUser": "创建用户",
+  "createNewUser": "创建新用户",
+  "original100Percent": "100%原创",
+  "original100PercentDescription": "沉浸在巧克力棒、糖果手杖、冰淇淋、太妃酥和可爱的饼干的精致味道中 - 一曲美妙的甜蜜交响曲等待着您。",
+  "replacement10DaysDescription": "通过我们的10天替换政策，享受无忧购物体验。如果您的购买不完美，我们将乐意为您替换。无忧地享受最美味的款待！",
+  "replacement10Days": "10天替换",
+  "warrantyYear": "1年保修",
+  "warrantyYearDescription": "通过我们的1年保修，尽情享受安心。我们对质量的承诺确保您的购买，就像棉花糖姜",
+  "addToCart": "添加到购物车",
+  "buyNow": "立即购买",
+  "available": "有货",
+  "color": "颜色",
+  "action": "操作",
+  "qty": "数量",
+  "searchCart": "搜索（产品名称、SKU、数量）",
+  "all": "全部",
+  "customer": "客户",
+  "date": "日期",
+  "totalPrice": "总价",
+  "totalDiscountedPrice": "折扣后总价",
+  "pending": "待处理",
+  "completed": "已完成",
+  "cancelled": "已取消",
+  "refunded": "已退款",
+  "searchCustomer": "搜索客户或订单号...",
+  "startDate": "开始日期",
+  "endDate": "结束日期",
+  "discountedTotalPrice": "折扣后总价",
+  "shipping": "运输",
+  "yourProfit": "您的利润",
+  "total": "总计",
+  "orderTime": "订单时间",
+  "paymentTime": "付款时间",
+  "deliveryTime": "承运商的交货时间",
+  "completionTime": "完成时间",
+  "customerInfo": "客户信息",
+  "addToBlackList": "加入黑名单",
+  "trackNo": "追踪编号",
+  "shipBy": "发货方式",
+  "speedy": "快速",
+  "card": "卡",
+  "payment": "付款",
+  "delivery": "交付",
+  "english": "英语",
+  "chinese": "中文",
+  "arabic": "阿拉伯语",
+  "farsi": "波斯语",
+  "home": "Home",
+  "categories": "Categories",
+  "aboutUs": "About Us",
+  "contactUs": "Contact Us",
+  "faqs": "FAQs"
 }
