--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -1,54 +1,165 @@
 {
-  "app": "app",
-  "job": "job",
+  "dashboard": "dashboard",
   "user": "user",
-  "list": "list",
-  "edit": "edit",
-  "shop": "shop",
-  "blog": "blog",
-  "post": "post",
-  "mail": "mail",
-  "chat": "chat",
-  "file": "file",
-  "tour": "tour",
-  "cards": "cards",
-  "blank": "blank",
+  "products": "products",
   "order": "order",
-  "lists": "lists",
+  "review": "reviews",
+  "list": "List",
   "create": "create",
-  "kanban": "kanban",
-  "general": "general",
-  "banking": "banking",
-  "booking": "booking",
-  "profile": "profile",
-  "account": "account",
+  "newUser": "New User",
+  "name": "name",
+  "username": "Username",
+  "registerType": "Registeration Type",
+  "role": "Role",
+  "orders": "Orders",
+  "cart": "Cart",
+  "status": "Status",
+  "searchUser": "Search User...",
   "product": "product",
-  "invoice": "invoice",
-  "details": "details",
-  "checkout": "checkout",
-  "calendar": "calendar",
-  "overview": "overview",
-  "analytics": "analytics",
-  "ecommerce": "e-commerce",
-  "management": "management",
-  "menu_level": "menu level",
-  "item_label": "item label",
-  "description": "description",
-  "other_cases": "other cases",
-  "item_caption": "item caption",
-  "file_manager": "File Manager",
-  "menu_level_1a": "menu level 1a",
-  "menu_level_1b": "menu level 1b",
-  "menu_level_2a": "menu level 2a",
-  "menu_level_2b": "menu level 2b",
-  "menu_level_3a": "menu level 3a",
-  "menu_level_3b": "menu level 4b",
-  "item_disabled": "item disabled",
-  "item_by_roles": "item by roles",
-  "item_external_link": "item external link",
-  "only_admin_can_see_this_item": "Only admin can see this item",
-  "upgrade_to_pro": "Upgrade to Pro",
-  "demo": {
-    "title": "English"
-  }
+  "createAt": "Created At",
+  "stock": "Stock",
+  "discount": "Discount",
+  "price": "Price",
+  "discountedPrice": "Discounted Price",
+  "rate": "Rate",
+  "newProduct": "New Product",
+  "delete": "Delete",
+  "deleteProduct": "Are you sure want to delete",
+  "items": "Items",
+  "clear": "Clear",
+  "selected": "selected",
+  "view": "View",
+  "edit": "Edit",
+  "deletePrompt": "Are you sure you  want to delete",
+  "search": "Search...",
+  "export": "Export",
+  "import": "Import",
+  "print": "Print",
+  "priceSale": "Sale Price",
+  "found": "Found",
+  "details": "Details",
+  "subDetails": "Title, short description, image...",
+  "productName": "Product Name",
+  "subDescription": "Sub Description",
+  "description": "Description",
+  "content": "Content",
+  "images": "Images",
+  "properties": "Properties",
+  "formPrperties": "Additional functions and attributes...",
+  "productCode": "Product Code",
+  "productSKU": "Product SKU",
+  "quantity": "Stock",
+  "category": "Category",
+  "colors": "Colors",
+  "tags": "Tags",
+  "saleLabel": "Sale Label",
+  "newLabel": "New Label",
+  "pricing": "Pricing",
+  "priceInputs": "Price related inputs",
+  "regularPrice": "Regular Price",
+  "salePrice": "Sale Price",
+  "includeDiscount": "Include Discount",
+  "createProduct": "Create Product",
+  "saveChanges": "Save Changes",
+  "createNewNroduct": "Create A New Product",
+  "writeSomething": "Write something awesome...",
+  "dropOrClick": "Drop files here or click",
+  "dropOrSelect": "Drop or Select file",
+  "browse": "Browse",
+  "throughMachine": "thorough your machine",
+  "removeAll": "Remove All",
+  "upload": "Upload",
+  "updateSuccess": "Update Successs",
+  "createsuccess": "Create Success",
+  "invalidInput": "Invalid input types",
+  "somethingWentWrong": "Something went wrong",
+  "deleteSuccess": "Delete Successfull!",
+  "usernameOrEmailExists": "Username Or Email exists",
+  "invalidEmail": "Email must be a valid email address",
+  "emailRequired": "Email is required",
+  "usernameRequired": "Username is required",
+  "roleRequired": "Role is required",
+  "statusRequired": "Status is required",
+  "addressRequired": "Address is required",
+  "countryRequired": "Country is required",
+  "fullNameRequired": "Full Name is required",
+  "phoneNumberRequired": "Phone Number is required",
+  "passwordRequired": "Password is required",
+  "passwordMismatch": "Password's not match",
+  "confirmPasswordRequired": "Confirm password is required",
+  "passwordMinLength": "Password should be of minimum 6 characters length",
+  "allowedFileTypes": "Allowed *.jpeg, *.jpg, *.png, *.gif",
+  "maxSize": "Max size of ${size}",
+  "banned": "Banned",
+  "applyDisableAccount": "Apply disable account",
+  "emailVerified": "Email Verified",
+  "disableVerificationEmail": "Disabling this will automatically send the user a verification email",
+  "deleteUser": "Delete User",
+  "emailAddress": "Email Address",
+  "fullName": "Full Name",
+  "phoneNumber": "phoneNumber",
+  "country": "Country",
+  "address": "Address",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "createUser": "Create User",
+  "createNewUser": "Create New User",
+  "original100Percent": "100% Original",
+  "original100PercentDescription": "Indulge in the exquisite taste of chocolate bars, candy canes, ice cream, toffee, and delightful cookies – a sweet symphony of flavors awaits.",
+  "replacement10DaysDescription": "Experience worry-free shopping with our 10-day replacement policy. If your purchase isn’t perfect, we’ll gladly replace it with a smile. Enjoy the finest treats worry-free!",
+  "replacement10Days": "10 Day Replacement",
+  "warrantyYear": "1 Year Warranty",
+  "warrantyYearDescription": "Relish peace of mind with our 1-year warranty. Our commitment to quality ensures that your purchase, like a cotton candy gingerbread cake, stays sweet and delightful throughout the year.",
+  "backToList": "Back to List",
+  "descriptionTabLabel": "Description",
+  "reviewsTabLabel": "Reviews",
+  "back": "Back",
+  "favorite": "Favorite",
+  "share": "Share",
+  "color": "Color",
+  "size": "Size",
+  "sizeChart": "Size Chart",
+  "addToCart": "Add to Cart",
+  "buyNow": "Buy Now",
+  "available": "Available",
+  "action": "Action",
+  "qty": "Qunantity",
+  "searchCart": "Search (Product Name , SKU , QTY)",
+  "all": "All",
+  "customer": "Customer",
+  "date": "Date",
+  "totalPrice": "Total Price",
+  "totalDiscountedPrice": "Discounted Total Price",
+  "pending": "Pending",
+  "completed": "Completed",
+  "cancelled": "Cancelled",
+  "refunded": "Refunded",
+  "searchCustomer": "Search customer or order number...",
+  "startDate": "Start date",
+  "endDate": "End Date",
+  "discountedTotalPrice": "Discounted Total Price",
+  "shipping": "Shipping",
+  "yourProfit": "Your Profit",
+  "total": "Total",
+  "orderTime": "Order time",
+  "paymentTime": "Payment time",
+  "deliveryTime": "Delivery time for the carrier",
+  "completionTime": "Completion time",
+  "customerInfo": "Customer Info",
+  "addToBlackList": "Add To Black List",
+  "trackNo": "Tracking Number",
+  "shipBy": "Ship By",
+  "speedy": "Speedy",
+  "card": "Card",
+  "payment": "Payment",
+  "delivery": "Delivery",
+  "english": "English",
+  "chinese": "Chinese",
+  "arabic": "Arabic",
+  "farsi": "Farsi",
+  "home": "Home",
+  "categories": "Categories",
+  "aboutUs": "About Us",
+  "contactUs": "Contact Us",
+  "faqs": "FAQs"
 }
