Added: User authentication

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -161,5 +161,8 @@
   "categories": "فئات",
   "aboutUs": "معلومات عنا",
   "contactUs": "اتصل بنا",
-  "faqs": "الأسئلة الشائعة"
+  "faqs": "الأسئلة الشائعة",
+  "emailExists": "البريد الإلكتروني موجود يرجى تجربة بريد آخر",
+  "loginSuccess": "مرحبا بكم في jojooshop",
+  "emailOrPasswordWrong": "البريد الإلكتروني أو كلمة المرور خاطئة يرجى المحاولة مرة أخرى"
 }
