--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -161,5 +161,8 @@
   "categories": "Categories",
   "aboutUs": "About Us",
   "contactUs": "Contact Us",
-  "faqs": "FAQs"
+  "faqs": "FAQs",
+  "emailExists": "Email exists please try another one",
+  "loginSuccess": "Welocom to jojooshop",
+  "emailOrPasswordWrong": "Email exists please try another one!"
 }
