--- a/src/locales/langs/fa.json
+++ b/src/locales/langs/fa.json
@@ -161,5 +161,8 @@
   "categories": "دسته بندی ها",
   "aboutUs": "درباره ما",
   "contactUs": "با ما تماس بگیرید",
-  "faqs": "سوالات متداول"
+  "faqs": "سوالات متداول",
+  "emailExists": "ایمیل وجود دارد لطفا یکی دیگر را امتحان کنید",
+  "loginSuccess": "Welocom به jojooshop",
+  "emailOrPasswordWrong": "ایمیل یا رمز عبور اشتباه است لطفا دوباره امتحان کنید"
 }
