Added: update user functionality

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -164,6 +164,6 @@
   "faqs": "الأسئلة الشائعة",
   "emailExists": "البريد الإلكتروني موجود يرجى تجربة بريد آخر",
   "loginSuccess": "مرحبا بكم في jojooshop",
-  "emailOrPasswordWrong": "البريد الإلكتروني أو كلمة المرور خاطئة يرجى المحاولة مرة أخرى",
+  "emailOrPasswordWrong": "البريد الإلكتروني أو كلمة المرور خاطئة!",
   "profile": "حساب تعريفي"
 }
