--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -164,6 +164,6 @@
   "faqs": "FAQs",
   "emailExists": "Email exists please try another one",
   "loginSuccess": "Welocom to jojooshop",
-  "emailOrPasswordWrong": "Email exists please try another one!",
+  "emailOrPasswordWrong": "Email or Password wrong!",
   "profile": "Profile"
 }
