--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -165,5 +165,6 @@
   "emailExists": "Email exists please try another one",
   "loginSuccess": "Welocom to jojooshop",
   "emailOrPasswordWrong": "Email or Password wrong!",
-  "profile": "Profile"
+  "profile": "Profile",
+  "processing": "Processing"
 }
