--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -166,5 +166,7 @@
   "loginSuccess": "Welocom to jojooshop",
   "emailOrPasswordWrong": "Email or Password wrong!",
   "profile": "Profile",
-  "processing": "Processing"
+  "processing": "Processing",
+  "reviewAddSuccess": "Review Added Successfully!",
+  "reviewDeleteSuccess": "Review Deleted Successfully!"
 }
