Translated home &  productList & product details

--- a/src/locales/langs/ar.json
+++ b/src/locales/langs/ar.json
@@ -3,7 +3,7 @@
   "user": "مستخدم",
   "product": "منتج",
   "order": "طلب",
-  "review": "المراجعات",
+  "review": "مراجعة",
   "list": "قائمة",
   "products": "منتجات",
   "create": "جديد",
@@ -168,5 +168,43 @@
   "profile": "حساب تعريفي",
   "processing": "يعالج",
   "reviewAddSuccess": "تمت إضافة المراجعة بنجاح!",
-  "reviewDeleteSuccess": "تم حذف المراجعة بنجاح!"
+  "reviewDeleteSuccess": "تم حذف المراجعة بنجاح!",
+  "jojooshopCom": "jojooshop.com",
+  "settings": "إعدادات",
+  "reset": "إعادة ضبط",
+  "mode": "وضع",
+  "contrast": "مقابلة",
+  "direction": "اتجاه",
+  "stretch": "تمتد",
+  "presets": "الإعدادات المسبقة",
+  "exitFullscreen": "الخروج من الشاشة الكاملة",
+  "fullscreen": "تكبير الشاشة",
+  "sortBy": "ترتيب حسب",
+  "featured": "متميز",
+  "newest": "الأحدث",
+  "highestDiscount": "أعلى الخصم",
+  "priceHighToLow": "السعر الاعلى الى الادنى",
+  "priceLowToHigh": "السعر من الارخص للاعلى",
+  "min": "دقيقة",
+  "max": "الأعلى",
+  "rating": "تقييم",
+  "filters": "المرشحات",
+  "up": "أعلى",
+  "resultsFound": "العثور على نتائج",
+  "shop": "محل",
+  "noData": "لاتوجد بيانات",
+  "productDetails": "تفاصيل المنتج",
+  "reviews": "التعليقات",
+  "noReview": "لا مراجعة",
+  "outOfStock": "إنتهى من المخزن",
+  "lowStock": "الأسهم منخفضة",
+  "inStock": "في الأوراق المالية",
+  "averageRating": "متوسط ​​تقييم",
+  "writeYourReview": "اكتب مراجعتك",
+  "addReview": "إضافة مراجعة",
+  "yourReviewAbout": "رأيك حول هذا المنتج",
+  "cancel": "يلغي",
+  "post": "بريد",
+  "ratingError": "يجب أن يكون التقييم أكبر من أو يساوي 1",
+  "reviewRequired": "المراجعة مطلوبة"
 }
