--- a/src/locales/langs/cn.json
+++ b/src/locales/langs/cn.json
@@ -3,7 +3,7 @@
   "user": "用户",
   "product": "产品",
   "order": "订单",
-  "review": "评价",
+  "review": "审查",
   "list": "列表",
   "products": "产品",
   "create": "新建",
@@ -112,6 +112,8 @@
   "buyNow": "立即购买",
   "available": "有货",
   "color": "颜色",
+  "favorite": "最喜欢的",
+  "share": "分享",
   "action": "操作",
   "qty": "数量",
   "searchCart": "搜索（产品名称、SKU、数量）",
@@ -147,16 +149,66 @@
   "chinese": "中文",
   "arabic": "阿拉伯语",
   "farsi": "波斯语",
-  "home": "Home",
-  "categories": "Categories",
-  "aboutUs": "About Us",
-  "contactUs": "Contact Us",
-  "faqs": "FAQs",
-  "emailExists": "Email exists please try another one",
-  "loginSuccess": "Welocom to jojooshop",
-  "emailOrPasswordWrong": "Email or Password wrong!",
-  "profile": "Profile",
-  "processing": "Processing",
-  "reviewAddSuccess": "Review Added Successfully!",
-  "reviewDeleteSuccess": "Review Deleted Successfully!"
+  "home": "首页",
+  "categories": "分类",
+  "aboutUs": "关于我们",
+  "contactUs": "联系我们",
+  "faqs": "常见问题",
+  "emailExists": "电子邮件已存在，请尝试另一个",
+  "loginSuccess": "欢迎来到jojooshop",
+  "emailOrPasswordWrong": "电子邮件或密码错误！",
+  "profile": "个人资料",
+  "processing": "处理中",
+  "reviewAddSuccess": "评论已成功添加！",
+  "reviewDeleteSuccess": "评论已成功删除！",
+  "jojooshopCom": "jojooshop.com",
+  "allRightsReserved": "保留所有权利",
+  "madeBy": "由...制作",
+  "legal": "法律声明",
+  "termsAndConditions": "条款和条件",
+  "privacyPolicy": "隐私政策",
+  "contact": "联系方式",
+  "adminEmail": "admin@jojooshop.com",
+  "useContentDisclaimer": "要使用Jojoshop的内容，只需具有非商业目的并提及来源即可。本网站的所有权属于Jojoshop。",
+  "settings": "设置",
+  "reset": "重置",
+  "mode": "模式",
+  "contrast": "对比度",
+  "direction": "方向",
+  "stretch": "拉伸",
+  "presets": "预设",
+  "exitFullscreen": "退出全屏",
+  "fullscreen": "全屏",
+  "sortBy": "排序方式",
+  "featured": "精选",
+  "newest": "最新",
+  "highestDiscount": "最高折扣",
+  "priceHighToLow": "价格：高到低",
+  "priceLowToHigh": "价格：低到高",
+  "min": "最小",
+  "max": "最大",
+  "rating": "评分",
+  "filters": "筛选",
+  "up": "上",
+  "resultsFound": "找到结果",
+  "shop": "店铺",
+  "noData": "没有找到数据",
+  "notFound": "未找到结果",
+  "noResults": "未找到 ",
+  "tryChecking": "请检查拼写错误或使用完整的单词",
+  "enterKeywords": "请输入关键词",
+  "productDetails": "产品：详情",
+  "reviews": "评论",
+  "noReview": "没有评论",
+  "outOfStock": "缺货",
+  "lowStock": "库存紧张",
+  "inStock": "有货",
+  "averageRating": "平均评分",
+  "writeYourReview": "写下您的评论",
+  "addReview": "添加评论",
+  "yourReviewAbout": "关于这个产品的您的评论",
+  "cancel": "取消",
+  "post": "发布",
+  "ratingError": "评分必须大于或等于1",
+  "reviewRequired": "评论是必填项"
 }
