--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -3,7 +3,7 @@
   "user": "user",
   "products": "products",
   "order": "order",
-  "review": "reviews",
+  "review": "review",
   "list": "List",
   "create": "create",
   "newUser": "New User",
@@ -168,5 +168,56 @@
   "profile": "Profile",
   "processing": "Processing",
   "reviewAddSuccess": "Review Added Successfully!",
-  "reviewDeleteSuccess": "Review Deleted Successfully!"
+  "reviewDeleteSuccess": "Review Deleted Successfully!",
+  "jojooshopCom": "jojooshop.com",
+  "allRightsReserved": "All rights reserved",
+  "madeBy": "made by",
+  "legal": "Legal",
+  "termsAndConditions": "Terms and Conditions",
+  "privacyPolicy": "Privacy Policy",
+  "contact": "Contact",
+  "adminEmail": "admin@jojooshop.com",
+  "useContentDisclaimer": "To use Jojoshop content, it is enough to have a non-commercial purpose and mention the source. All the rights of this website belong to Jojoshop.",
+  "settings": "Settings",
+  "reset": "Reset ",
+  "mode": "Mode",
+  "contrast": "Contrast",
+  "direction": "Direction",
+  "stretch": "Stretch",
+  "presets": "Presets",
+  "exitFullscreen": "Exit Fullscreen",
+  "fullscreen": "Fullscreen",
+  "sortBy": "Sort By",
+  "featured": "Featured",
+  "newest": "Newest",
+  "heighestDiscount": "Hi",
+  "highestDiscount": "Higest Discount",
+  "priceHighToLow": "Price: High to Low",
+  "priceLowToHigh": "Price: Low to High",
+  "min": "Min",
+  "max": "Max",
+  "rating": "Rating",
+  "filters": "Filters",
+  "up": "Up",
+  "resultsFound": "Results Found",
+  "shop": "Shop",
+  "noData": "No Data Found",
+  "notFound": "Not Found",
+  "noResults": "No results found",
+  "tryChecking": "Try checking for typos or using complete words",
+  "enterKeywords": "Please enter keywords",
+  "productDetails": "Product: Details",
+  "reviews": "Reviews",
+  "noReview": "No Review",
+  "outOfStock": "Out Of Stock",
+  "lowStock": "Low Stock",
+  "inStock": "In Stock",
+  "averageRating": "Average Rating",
+  "writeYourReview": "Write Your Review",
+  "addReview": "Add Review",
+  "yourReviewAbout": "Your review about this product",
+  "cancel": "Cancel ",
+  "post": "Post",
+  "ratingError": "Rating must be greater than or equal to 1",
+  "reviewRequired": "Review is required"
 }
