--- a/src/locales/langs/fa.json
+++ b/src/locales/langs/fa.json
@@ -3,7 +3,7 @@
   "user": "کاربر",
   "product": "محصول",
   "order": "سفارش",
-  "review": "بررسی ها",
+  "review": "مرور",
   "list": "فهرست",
   "products": "محصولات",
   "create": "جدید",
@@ -168,5 +168,43 @@
   "profile": "مشخصات",
   "processing": "در حال پردازش",
   "reviewAddSuccess": "بررسی با موفقیت اضافه شد!",
-  "reviewDeleteSuccess": "بررسی با موفقیت حذف شد!"
+  "reviewDeleteSuccess": "بررسی با موفقیت حذف شد!",
+  "jojooshopCom": "jojooshop.com",
+  "settings": "تنظیمات",
+  "reset": "بازنشانی کنید",
+  "mode": "حالت",
+  "contrast": "تضاد",
+  "direction": "جهت",
+  "stretch": "کش آمدن",
+  "presets": "تنظیمات از پیش تعیین شده",
+  "exitFullscreen": "خروج از تمام صفحه",
+  "fullscreen": "تمام صفحه",
+  "sortBy": "مرتب سازی بر اساس",
+  "featured": "ویژه",
+  "newest": "جدیدترین",
+  "highestDiscount": "بالاترین تخفیف",
+  "priceHighToLow": "قیمت: بالا به پایین",
+  "priceLowToHigh": "قیمت: کم به بالا",
+  "min": "حداقل",
+  "max": "حداکثر",
+  "rating": "رتبه بندی",
+  "filters": "فیلترها",
+  "up": "بالا",
+  "resultsFound": "نتایج یافت شد",
+  "shop": "خرید کنید",
+  "noData": "داده ای یافت نشد",
+  "productDetails": "جزئیات محصول",
+  "reviews": "بررسی ها",
+  "noReview": "بدون بررسی",
+  "outOfStock": "تمام شده",
+  "lowStock": "موجودی کم",
+  "inStock": "در انبار",
+  "averageRating": "میانگین امتیاز",
+  "writeYourReview": "نظر خود را بنویسید",
+  "addReview": "افزودن نظر",
+  "yourReviewAbout": "نظر شما در مورد این محصول",
+  "cancel": "لغو کنید",
+  "post": "پست",
+  "ratingError": "رتبه بندی باید بزرگتر یا مساوی 1 باشد",
+  "reviewRequired": "بررسی لازم است"
 }
